--- a/build.xml
+++ b/build.xml
@@ -3,6 +3,7 @@
 
 	<property name="src.dir" value="${basedir}/src" />
 	<property name="build.dir" value="${basedir}/build" />
+	<property name="dist.dir" value="${basedir}/dist" />
 
 	<property name="freenet" value="${basedir}/../fred" />
 	<property name="freenet.jar" value="${freenet}/lib/freenet-cvs-snapshot.jar" />
@@ -21,8 +22,25 @@
 		</javac>
 	</target>
 
+	<target name="prepare-dist">
+		<mkdir dir="${dist.dir}" />
+	</target>
+
+	<target name="dist" depends="compile, prepare-dist">
+		<jar destfile="${dist.dir}/${ant.project.name}.jar">
+			<manifest>
+				<attribute name="Plugin-Main-Class" value="plugin.shortener.ShortenerPlugin" />
+			</manifest>
+			<fileset dir="${build.dir}" />
+		</jar>
+	</target>
+
 	<target name="clean">
 		<delete dir="${build.dir}" />
+	</target>
+
+	<target name="dist-clean" depends="clean">
+		<delete dir="${dist.dir}" />
 	</target>
 
 </project>
